check_output.txt
    Checking web-server-report v0.1.0 (/home/tchuong/Màn hình nền/Code-Server-Report-Crypto-AI/Web-server-Report)
error[E0308]: mismatched types
   --> src/service_islands/layer5_business_logic/crypto_reports/handlers.rs:87:55
    |
 87 |                     .unwrap_or_else(|_| Response::new(Body::from("Response build error")))
    |                                         ------------- ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `String`, found `Body`
    |                                         |
    |                                         arguments to this function are incorrect
    |
note: associated function defined here
   --> /home/tchuong/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/http-0.2.12/src/response.rs:251:12
    |
251 |     pub fn new(body: T) -> Response<T> {
    |            ^^^

For more information about this error, try `rustc --explain E0308`.
error: could not compile `web-server-report` (lib) due to 1 previous error
